# ifuntrans

./: .dockerignore  .env  .env_formal  .gitignore  Dockerfile  README.md  env  main.py  pyproject.toml  run.sh  server.py  translate_docx.py
docs/: AI翻译平台项目规划.md  使用案例.md  机翻引擎对接文档.md
ifuntrans/: characters.py  cli.py  exceptions.py  lang_detection.py  metadata.py  pe.py  placeholder.py  s3.py  tm.py  tokenizer.py  translate.py  utils.py
ifuntrans/api/: __init__.py  constants.py  doc_translate.py  html.py  localization.py  translate.py
ifuntrans/api/models/: requests.py  responses.py
ifuntrans/async_translators/: __init__.py  chatgpt.py  google.py
ifuntrans/pe/: __init__.py  general.py  tr.py
ifuntrans/translators/: __init__.py  baidu.py  base.py  chatgpt.py  constants.py  deepl.py  detection.py  engines.py  google.py  libre.py  linguee.py  microsoft.py  mymemory.py  papago.py  pons.py  qcri.py  tencent.py  validate.py  yandex.py
scripts/: check_health.sh  merge.py  pe.py  rename_vars.py  source.fish  source.ps1  source_formal.fish  synonym_transform.py  translate_folder.sh
tests/: data.py  test_api.py  test_characters.py  test_localization.py  test_pe.py  test_s3.py  test_tm.py  test_translate.py
tests/assets/: origin.xlsx  page.html  page2.html  page3.html  small.xlsx  target.xlsx  terms.xlsx
tests/test_async_translators/: test_chatgpt.py  test_google.py
tests/test_translators/: test_baidu.py  test_deepl.py  test_google.py  test_libre.py  test_linguee.py  test_microsoft_trans.py  test_mymemory.py  test_pons.py  test_tencent.py
