[tool.poetry]
name = "ifuntrans"
version = "0.1.0"
description = "Ifun Game Localization Translation Service"
authors = ["BrightXiaoHan <beatmight@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.100.0"
httpx = "^0.24.1"
langcodes = {extras = ["data"], version = "^3.3.0"}
openai = "^0.27.8"
uvicorn = "^0.23.1"
beautifulsoup4 = "^4.12.2"
revchatgpt = "^6.8.6"
pandas = {extras = ["excel"], version = "^2.0.3"}
tqdm = "^4.65.0"
opencc = "^1.1.6"
tiktoken = "^0.4.0"
tenacity = "^8.2.3"
aioboto3 = "^11.3.0"
gptcache = "^0.1.40"
titlecase = "^2.4"
more-itertools = "^10.1.0"
whoosh = "^2.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
autoflake = "^2.2.0"
pyflyby = "^1.8.5"
ipdb = "^0.13.13"
debugpy = "^1.6.7"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
pyinstaller = "^5.13.2"
pyarmor = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ifuntrans-server = "ifuntrans.server:main"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["ifuntrans"]

[tool.pyright]
venvPath = ".venv"
